# vite-tauri-python-template

./: .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: HelloWorld.vue  README.md
src/layouts/: README.md
src/pages/: README.md
src/plugins/: README.md
src/router/: index.ts
src/stores/: README.md
src/styles/: README.md
