[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
command-group = "2.1.0"

[features]
# 此功能用于生产构建或当 `devPath` 指向文件系统且内置开发服务器被禁用时。
# 如果你直接使用 cargo 而不是 tauri 的 cli，你可以使用此功能标志在 tauri 的 `dev` 和 `build` 模式之间切换。
# 请勿删除！！
custom-protocol = ["tauri/custom-protocol"]
